--- a/html_css/responsividade/index.html
+++ b/html_css/responsividade/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,9 +38,37 @@
                 </li>
             </ul>
             <a href="#"><img class="container__imagem" src="img/Polygon 1 (Stroke).svg" alt="Logo da Alurabooks"></a>
+            <h1 class="container__titulo">
+                <strong class="container__titulo--negrito">Alura</strong>Books</h1>
         </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcao-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item"> 
+                    <a class="lista-menu__link" href="#">Programação</a>
+                </li>
+                <li class="lista-menu__item"> 
+                    <a class="lista-menu__link" href="#">Front-end</a>
+                </li>
+                <li class="lista-menu__item"> 
+                    <a class="lista-menu__link" href="#">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item"> 
+                    <a class="lista-menu__link" href="#">Business</a>
+                </li>
+                <li class="lista-menu__item"> 
+                    <a class="lista-menu__link" href="#">Desing e UX</a>
+                </li>
+            </ul>       
+            <li class="opcoes__item"><a href="#" class="opcoes__link"></a>Favoritos</li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link"></a>Minha estante</li>
+        </ul>
         <div class="container">
-            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img class="container__imagem container__imagem-transparente" src="img/Favoritos.svg" alt="Meus favoritos"></a>
             <a href="#"><img class="container__imagem" src="img/Sacola.svg" alt="Uma sacola de compra"></a>
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="Meu perfil"></a>
         </div>
@@ -52,7 +81,7 @@
         <input class="banner__pesquisa" type="search" placeholder="Qual será sua próxima leitura?">
     </section>
     <section class="carrosel">
-        <h2 class="carrosel__titulo">Novos lançamento</h2>
+        <h2 class="carrosel__titulo">Mais vendidos</h2>
 
         <!-- Slider main container -->
         <div class="swiper">
@@ -180,6 +209,19 @@
             </li>
         </ul>
     </section>
+
+    <section class="contato">
+        <div class="contato__descricao">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualização de ebooks, novos livros, promoções e outros</p>
+        </div>    
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+
+    <hr/>
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     
