--- a/html_css/responsividade/index.html
+++ b/html_css/responsividade/index.html
@@ -221,6 +221,14 @@
     <hr/>
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+            <li class="lista-rodape__item">
+                <img src="img/AluraBooks (1)/Frame 132.svg" alt="">
+                <a href="#" class="lista-rodape__link">Casa do código</a>
+            </li>
+
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
